<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_esports"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_esports" />

    <item
        android:id="@+id/navigation_champion"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_champion" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_light_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_format_list_numbered_white_24dp"
        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_news" />

</menu>
