<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GAVINE"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/buscar_jugador_hint"
            app:iconifiedByDefault="false"
            android:background="@drawable/bottomappbarlayout_shape"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/material_card_view_content_padding"
            app:strokeWidth="@dimen/material_card_view_stroke_width"
            style="@style/Theme.MyApp.MaterialCardView"
            android:layout_gravity="start">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:textSize="@dimen/material_card_view_title_size"
                    android:text="@string/card_login_please"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:background="@drawable/material_button_shape"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/card_button_login"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="Favourites"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFavourites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</ScrollView>